test/fail/basic_syntax/bad_comma.lly
#[
SyntaxError: Unexpected token ,.
    from bad_comma.lly:6:
]#

var a = 10    a = 10,
